--- a/deno.json
+++ b/deno.json
@@ -4,11 +4,13 @@
     "clean": "rm -rf ./dist/"
   },
   "imports": {
-    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.4",
-    "@octokit/openapi-types": "npm:@octokit/openapi-types@^22.2.0",
-    "@octokit/rest": "npm:@octokit/rest@^21.0.2",
-    "@std/dotenv": "jsr:@std/dotenv@^0.225.2",
-    "@std/fs": "jsr:@std/fs@^1.0.3",
-    "@std/path": "jsr:@std/path@^1.0.6"
+    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.7",
+    "@kth/canvas-api": "npm:@kth/canvas-api@^5.0.0-beta.7",
+    "@octokit/openapi-types": "npm:@octokit/openapi-types@^23.0.1",
+    "@octokit/rest": "npm:@octokit/rest@^21.1.0",
+    "@std/csv": "jsr:@std/csv@^1.0.4",
+    "@std/dotenv": "jsr:@std/dotenv@^0.225.3",
+    "@std/fs": "jsr:@std/fs@^1.0.8",
+    "@std/path": "jsr:@std/path@^1.0.8"
   }
 }
